// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericSelector renders markup with state 1`] = `
<ng-ais-numeric-selector
  cx={[Function Function]}
  operator={[Function String]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-NumericSelector"
  >
    
        
    <select
      class="ais-NumericSelector-select"
    >
      
          
      
      <option
        class="ais-NumericSelector-option"
        value="10"
      >
        
            foo
          
      </option>
      <option
        class="ais-NumericSelector-option"
        value="20"
      >
        
            bar
          
      </option>
      <option
        class="ais-NumericSelector-option"
        value="30"
      >
        
            foobar
          
      </option>
      <option
        class="ais-NumericSelector-option"
        value="40"
      >
        
            barfoo
          
      </option>
      
        
    </select>
    
      
  </div>
    
</ng-ais-numeric-selector>
`;

exports[`NumericSelector renders markup without state 1`] = `
<ng-ais-numeric-selector
  cx={[Function Function]}
  operator={[Function String]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-NumericSelector"
  >
    
        
    <select
      class="ais-NumericSelector-select"
    >
      
          
      
      
        
    </select>
    
      
  </div>
    
</ng-ais-numeric-selector>
`;
